--- a/assets/sass/section/agenda/single.sass
+++ b/assets/sass/section/agenda/single.sass
@@ -333,6 +333,7 @@
                 .block-organizations
                     .organizations
                         @include grid(4)
+                        @include grid(5, xxl)
                         .media
                             padding: 0
 
@@ -340,5 +341,6 @@
         .programme-btn-container
             .btn
                 margin-left: offset(6)
+    
     footer#document-footer
         padding-top: 0
